--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,12 +6,12 @@
     <title>NodeJS</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
+<body> -->
     <h1>Home Page</h1>
     <a href="/about">About</a>
     <h2>
         <%= text%>
     </h2>
     <img src="images/nobita.jpg" alt="nobita" >
-</body>
-</html>
+<!-- </body>
+</html> -->
