--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
 </head>
-<body>
+<body> -->
     <h1><%= text%></h1>
-</body>
-</html>
+<!-- </body>
+</html> -->
